kind/10b-kuadrant-istio/http-echo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-echo-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.echo.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
