kind/10b-kuadrant-istio/gateway-route-ratelimit.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-echo-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.echo.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-echo
spec:
  parentRefs:
  - name: http-echo-gateway
  hostnames: ["try.echo.com"]
  rules:
  - matches:
    - path:
        type: Exact
        value: /get
    backendRefs:
    - name: http-echo
      port: 8080
